# Latebat

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Pipfile  ReadMe.md
frontend/: bun.lockb  index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  hooks.ts  store.ts
frontend/src/components/: Badge.module.css  Badge.tsx  DocumentItem.module.css  DocumentItem.tsx  DocumentUpload.module.css  DocumentUpload.tsx  Navigator.module.css  Navigator.tsx  index.ts
frontend/src/data/: docs.ts
frontend/src/middlewares/: documents.ts
frontend/src/outlets/: index.ts  internal.module.css  internal.tsx
frontend/src/pages/: download.module.css  (+6 more)
lebetat/: BUILD  lebetat.cc  lebetat.h  main.cc
libetat-pdf/: BUILD  meta.h  pdf.cc  pdf.h
pdf-sub-system/: LICENSE  Pipfile  ReadMe.md  pyproject.toml  setup.cfg
pdf-sub-system/lebata/: __init__.py  __main__.py  logger.py  pdf.py
pdf-sub-system/lebata/common/: __init__.py  common.py  handwritten.py  typed.py
pdf-sub-system/lebata/pdf/: __init__.py  compiler.py  data.py  extractor.py  processor.py
pdf-sub-system/letebat/: __main__.py  logger.py
pdf-sub-system/letebat-data/: meta.json
pdf-sub-system/letebat-data/dat/: keywords.ru.json  names.ru.json
pdf-sub-system/letebat/img/: __init__.py  anonimize.py  prepare.py  type.py
pdf-sub-system/sample-bck/: .gitattributes
server/: go.mod  go.sum  main.go
server/http/: consumers-endpoints.go  data-endpoints.go  middlewares.go  open-endpoints.go  server.go
server/model/: document.go  starter.go  subject.go  user.go
server/rotation/: rotator.go
