[project]
name = "lebatat"
description = "Sub system for anonimazing data about client"
version = "0.0.0"
license = "MIT"
authors = [
  { name = "AssertionBit", email = "assertionbit@icloud.com" }
]
dependencies = [
  "click==8.1.7",
  "opencv-python==4.8.1.78",
  "pypdf==3.17.3",
  "pytesseract==0.3.10",
  "reportlab==4.0.8",
]

[project.scripts]
letebat = "letebat"
