[metadata]
name = letebat
version = attr: letebat.__version__
author = AssertionBit
author_email = assertionbit@icloud.com
description = PDF sub system for letebat project
long_description = file: ReadMe.md, LICENSE
keywords = pdf, system
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    click>=8.1
    opencv-python>=4.8
    pypdf>=3.17
    pytesseract>=0.3
    reportlab>=4.0

; [options.package_data]
; * = *.txt, *.rst
; hello = *.msg

[options.entry_points]
console_scripts =
    letebat = letebat

; [options.extras_require]
; pdf = ReportLab>=1.2; RXP
; rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    letebat-data*
    samples*
    docs*
